# unifydb

./: LICENSE  README.md  pyproject.toml
.history/onedb/adapters/: dynamodb_20260206203229.py  elasticsearch_db_20260206203452.py
onedb/: __init__.py  exceptions.py
onedb/adapters/: __init__.py  bigquery.py  cassandra_db.py  db2.py  dynamodb.py  elasticsearch_db.py  mongodb.py  mysql.py  neo4j_db.py  oracle.py  postgresql.py  redis_db.py  snowflake_db.py  sqlite.py
onedb/core/: base.py  connection.py  manager.py  query_builder.py
unifydb/: __init__.py  exceptions.py
unifydb/adapters/: __init__.py  bigquery.py  cassandra_db.py  db2.py  mongodb.py  mysql.py  neo4j_db.py  redis_db.py  snowflake_db.py  sqlite.py
unifydb/core/: base.py  connection.py  query_builder.py
unifydb/web/: app.py
unifydb/web/templates/: base.html  dashboard.html
