[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedb"
version = "1.0.0"
description = "One library to rule them all databases. Unified Python interface for 15+ database systems."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EndermanHack19", email = "your@email.com"}
]
keywords = [
    "database", "sql", "nosql", "orm", "postgresql", "mysql", 
    "mongodb", "redis", "oracle", "sqlite", "elasticsearch",
    "cassandra", "dynamodb", "snowflake", "bigquery", "neo4j",
    "unified", "multi-database", "database-adapter"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Individual database drivers
oracle = ["oracledb>=1.0.0"]
mysql = ["PyMySQL>=1.0.0"]
mssql = ["pymssql>=2.2.0"]
postgresql = ["psycopg2-binary>=2.9.0"]
mongodb = ["pymongo>=4.0.0"]
sqlite = []
redis = ["redis>=4.0.0"]
db2 = ["ibm_db>=3.0.0"]
elasticsearch = ["elasticsearch>=8.0.0"]
cassandra = ["cassandra-driver>=3.25.0"]
mariadb = ["PyMySQL>=1.0.0"]
dynamodb = ["boto3>=1.26.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
bigquery = ["google-cloud-bigquery>=3.0.0"]
neo4j = ["neo4j>=5.0.0"]

# All databases
all = [
    "onedb[oracle]",
    "onedb[mysql]",
    "onedb[mssql]",
    "onedb[postgresql]",
    "onedb[mongodb]",
    "onedb[redis]",
    "onedb[db2]",
    "onedb[elasticsearch]",
    "onedb[cassandra]",
    "onedb[dynamodb]",
    "onedb[snowflake]",
    "onedb[bigquery]",
    "onedb[neo4j]",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/EndermanHack19/onedb"
Documentation = "https://github.com/EndermanHack19/onedb#readme"
Repository = "https://github.com/EndermanHack19/onedb"
Issues = "https://github.com/EndermanHack19/onedb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["onedb*"]

[tool.setuptools.package-data]
onedb = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
